--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/jaytee-padilla/ip-address-tracker#readme",
   "devDependencies": {
     "sass": "^1.53.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
