--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-sass": "sass --no-source-map -w styles/scss/main.scss styles/css/main.css"
+    "watch-sass": "sass --no-source-map -w styles/scss/main.scss styles/css/main.css",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,11 @@
   },
   "homepage": "https://github.com/jaytee-padilla/ip-address-tracker#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.2",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.6.2",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "sass": "^1.53.0"
   },
   "dependencies": {
