--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.53.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "us-state-converter": "^1.0.6"
   }
 }
